export class Donnee{
   private date : Date;

    public constructor (date : Date) {
        this.date = date;
    }

    public getDate() : Date{
        return this.date;
    }



}