@startuml
'https://plantuml.com/sequence-diagram


class Profil {
age : number
nom : string
sexe : sexeBiologique
dateDeNaissance : date
niveauActivité : string
listeDeDonneesQt : list <DonneeQuotidienne>
listeDeDonneesBio : list <DonneeQuotidienne>


entrerDonnee() : Donnee
obtenirDonneesBio(Date) : listeDeDonneesBio
obtenirDonneesQt (Date) : listeDeDonneesQt



}

class Donnee{
date : Date

}

class Sommeil {
heureCoucher : date
heureLever : date
qualite : number

calculerTempsSommeil(Date1, Date2) : number
estSuffisant (): boolean
}
DonneeQuotidienne <|-- Sommeil

class activitePhysique {
nomActivite : String
duree : number
intensite : number

calculerTempsRepos (number) : number

}
DonneeQuotidienne <|--activitePhysique

class caloriesConsommation {
caloriesConsommees : number
}
DonneeQuotidienne <|-- caloriesConsommation


class DonneeBiologique{
age : number
taille : number
sexe : enum
poids : number
}

Donnee <|-- DonneeBiologique
Donnee <|-- DonneeQuotidienne




class Entrainement{
description
date
intensite
duree
listeExercice
}
activitePhysique <|--Entrainement


class AnalyseStats {
profil : Profil
moyenneSommeil : number
moyenneCalories : number
moyenneActivite : number

genererRapportQuotidien (Date): string
genererRapportHebdo (Date, Date) : string
genererRapportMensuel (Date, Date) : string

}










@enduml